What a terrible day

--- a/pro2/index.html
+++ b/pro2/index.html
@@ -5,12 +5,14 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+	<div class="title-deco"></div>
 	<div id="title-container"> 
 		<div class="title-box">
 		<h1 id="title">Inconsiquential survey</h1>
 		</div>
+		</div>
 	</div>
-	</div>
+
 	<div id="personal-container">
 		<div id="personal-box">
 			<p id= "description">This is a short and inconsiquential survey. Thank you for your time</p> 
