can't focus today

--- a/pro2/index.html
+++ b/pro2/index.html
@@ -17,6 +17,7 @@
 		<div id="personal-box">
 			<p id= "description">This is a short and inconsiquential survey. Thank you for your time</p> 
 			<form id= "survey-form">
+				<div class="form-container">
 				<div class="labels" id="name-label">
 					<label>Name: </label>
 				</div>
@@ -51,6 +52,7 @@
 				<button type="submit">Submit</button>
 
 			</form>
+				</div>
 
 		</div>
 	</div>
