some work done today

--- a/pro2/index2.html
+++ b/pro2/index2.html
@@ -26,6 +26,9 @@
 					<input type="number" id="age">
 				</li>
 				<li>
+					<label for="message">Message</label>
+					<textarea rows="3" id="message" placeholder="Comments or suggestions"></textarea>
+				<li>
 					<p>Hobbies (check all that apply)</p>
 					<ul class="flex-inner">
 						<li>
@@ -34,27 +37,23 @@
 						</li>
 						<li>
 							<input value="2" type="checkbox" id="h2">
-							<label for="h1">Hobby 2</label>
+							<label for="h2">Hobby 2</label>
 						</li>
 						<li>
 							<input value="3" type="checkbox" id="h3">
-							<label for="h1">Hobby 3</label>
+							<label for="h3">Hobby 3</label>
 						</li>
 						<li>
 							<input value="4" type="checkbox" id="h4">
-							<label for="h1">Hobby 4</label>
+							<label for="h4">Hobby 4</label>
 						</li>
 						<li>
 							<input value="5" type="checkbox" id="h5">
 							<label for="h1">Hobby 5</label>
 						</li>
 
-
-
-
-
-
-			<ul>
+					</ul>
+				</li>
 		</div>
 	</body>
 </html>
