Layout is looking good, almost ready for content

--- a/pro2/index3.html
+++ b/pro2/index3.html
@@ -5,6 +5,7 @@
 
 <body>
 	<h1 id="title">Inconsiquential survey</h1>
+	<div class="title-deco"></div>
 	
 	<div class="outer" id="outer">
 		<div class="inner">
@@ -13,6 +14,15 @@
 		</div>	
 		<div class="inner">
 		</div>	
+		<div class="inner">
+		</div>
+		<div class="inner-message">
+		</div>
+		<div class="inner-message">
+		</div>
+
+
+		
 
 	</div>
 
