I think I need to test outside of the laptop

--- a/pro2/index3.html
+++ b/pro2/index3.html
@@ -37,21 +37,11 @@
 				<option value="9">Six</option>
 			</select>
 		</div>	
-		<div class="inner names">
-			<p>First choice: </p>
-			<label for="r1" name="r1-label">
-				<input type="radio" id="r1" name="1st-choice" />
-			Choice 1
-			</label>	
-			<label for="r1" name="r1-label">
-				<input type="radio" id="r2" name="1st-choice" />
-			Choice 2
-			</label>
-			<label for="r1" name="r1-label">
-				<input type="radio" id="r3" name="1st-choice" />
-			Choice 3
-			</label>
-			<p>Second choice: </p>
+		<div class="inner names" style="flex-wrap: wrap;">
+		<div>
+		<div class="radio-outer"> 
+			<p class="radio-label">Second choice: </p>
+			<div class="radio-inner">
 			<label for="r2" name="r2-label">
 				<input type="radio" id="r4" name="2nd-choice" />
 			Choice 1
@@ -64,14 +54,106 @@
 				<input type="radio" id="r6" name="2nd-choice" />
 			Choice 3
 			</label>
-
-
+			</div>
+		</div>
+		<div class="radio-outer"> 
+			<p class="radio-label">Second choice: </p>
+			<div class="radio-inner">
+			<label for="r2" name="r2-label">
+				<input type="radio" id="r4" name="2nd-choice" />
+			Choice 1
+			</label>	
+			<label for="r2" name="r1-label">
+				<input type="radio" id="r5" name="2nd-choice" />
+			Choice 2
+			</label>
+			<label for="r2" name="r1-label">
+				<input type="radio" id="r6" name="2nd-choice" />
+			Choice 3
+			</label>
+			</div>
+		</div>
+		<div class="radio-outer"> 
+			<p class="radio-label">Second choice: </p>
+			<div class="radio-inner">
+			<label for="r2" name="r2-label">
+				<input type="radio" id="r4" name="2nd-choice" />
+			Choice 1
+			</label>	
+			<label for="r2" name="r1-label">
+				<input type="radio" id="r5" name="2nd-choice" />
+			Choice 2
+			</label>
+			<label for="r2" name="r1-label">
+				<input type="radio" id="r6" name="2nd-choice" />
+			Choice 3
+			</label>
+			</div>
+		</div>
+		<div class="radio-outer"> 
+			<p class="radio-label">Second choice: </p>
+			<div class="radio-inner">
+			<label for="r2" name="r2-label">
+				<input type="radio" id="r4" name="2nd-choice" />
+			Choice 1
+			</label>	
+			<label for="r2" name="r1-label">
+				<input type="radio" id="r5" name="2nd-choice" />
+			Choice 2
+			</label>
+			<label for="r2" name="r1-label">
+				<input type="radio" id="r6" name="2nd-choice" />
+			Choice 3
+			</label>
+			</div>
+		</div>
 
 		</div>	
-		<div class="inner">
-			<input id="c1" type="checkbox" name="options">Option 1</input>
-			<input id="c1" type="checkbox" name="options">Option 2</input>
-			<input id="c1" type="checkbox" name="options">Option 3</input>
+		</div>
+		<div class="inner names" style="align-items: center; flex-direction: row; flex-wrap: wrap;"> 
+			<div style="height= 20px; display: block;">
+			<label>Checkboxes</label>
+			</div>
+			<div class="checkboxes">
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label><input type="checkbox"/>Label text</label>
+			</div>
+
+
+			</div>
 		</div>
 		<div class="inner-message">
 			<p>Additional comment: </p>
@@ -83,5 +165,5 @@
 		<button type="submit" style="display:block; width: 50%">Submit</button>
 	</div>
 	</form>
-
+<script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
 </body>
