passes the test, need another ppm or two to clean up the css finally

--- a/pro2/index3.html
+++ b/pro2/index3.html
@@ -25,13 +25,13 @@
 				<option value="3">Three</option>
 			</select>
 			<label id="dropdown2-label">Second dropdown</label>
-			<select id="2nd-dropdown">
+			<select id="dropdown2">
 				<option value="4">Four</option>
 				<option value="5">Five</option>
 				<option value="6">Six</option>
 			</select>
 			<label id="dropdown3-label">Second dropdown</label>
-			<select id="3rd-dropdown">
+			<select id="dropdown3">
 				<option value="7">Four</option>
 				<option value="8">Five</option>
 				<option value="9">Six</option>
@@ -40,130 +40,104 @@
 		<div class="inner names" style="flex-wrap: wrap;">
 		<div>
 		<div class="radio-outer"> 
-			<p class="radio-label">Second choice: </p>
+			<p class="radio-label-p">Second choice: </p>
 			<div class="radio-inner">
-			<label for="r2" name="r2-label">
-				<input type="radio" id="r4" name="2nd-choice" />
+			<label for="r1" name="r1-label" class="radio-label">
+				<input type="radio" id="r1" name="radio-choice" value="0"/>
 			Choice 1
 			</label>	
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r5" name="2nd-choice" />
+			<label for="r1" name="r1-label" class="radio-label">
+				<input type="radio" id="r2" name="radio-choice" value="1"/>
 			Choice 2
 			</label>
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r6" name="2nd-choice" />
+			<label for="r1" name="r1-label" class="radio-label">
+				<input type="radio" id="r3" name="radio-choice" value="2"/>
 			Choice 3
 			</label>
 			</div>
 		</div>
 		<div class="radio-outer"> 
-			<p class="radio-label">Second choice: </p>
+			<p class="radio-label-p">Second choice: </p>
 			<div class="radio-inner">
-			<label for="r2" name="r2-label">
-				<input type="radio" id="r4" name="2nd-choice" />
+			<label for="r2" name="r2-label" class="radio-label">
+				<input type="radio" id="r4" name="radio-choice2" value="0"/>
 			Choice 1
 			</label>	
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r5" name="2nd-choice" />
+			<label for="r2" name="r2-label" class="radio-label">
+				<input type="radio" id="r5" name="radio-choice2" value="1"/>
 			Choice 2
 			</label>
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r6" name="2nd-choice" />
-			Choice 3
-			</label>
-			</div>
-		</div>
-		<div class="radio-outer"> 
-			<p class="radio-label">Second choice: </p>
-			<div class="radio-inner">
-			<label for="r2" name="r2-label">
-				<input type="radio" id="r4" name="2nd-choice" />
-			Choice 1
-			</label>	
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r5" name="2nd-choice" />
-			Choice 2
-			</label>
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r6" name="2nd-choice" />
-			Choice 3
-			</label>
-			</div>
-		</div>
-		<div class="radio-outer"> 
-			<p class="radio-label">Second choice: </p>
-			<div class="radio-inner">
-			<label for="r2" name="r2-label">
-				<input type="radio" id="r4" name="2nd-choice" />
-			Choice 1
-			</label>	
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r5" name="2nd-choice" />
-			Choice 2
-			</label>
-			<label for="r2" name="r1-label">
-				<input type="radio" id="r6" name="2nd-choice" />
+			<label for="r2" name="r2-label" class="radio-label">
+				<input type="radio" id="r6" name="radio-choice2" value="2"/>
 			Choice 3
 			</label>
 			</div>
 		</div>
 
+
 		</div>	
 		</div>
 		<div class="inner names" style="align-items: center; flex-direction: row; flex-wrap: wrap;"> 
 			<div style="height= 20px; display: block;">
-			<label>Checkboxes</label>
+			<label id="checkbox-label">Checkboxes</label>
 			</div>
 			<div class="checkboxes">
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="0"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="1"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="2"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="3"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="4"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="5"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="6"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="7"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="8"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="9"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="10"/>Label text</label>
 			</div>
 			<div style="display: block;">
-			<label><input type="checkbox"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="11"/>Label text</label>
+			</div>
+			<div style="display: block;">
+			<label class="radio-label"><input type="checkbox" value="12"/>Label text</label>
+			</div>			<div style="display: block;">
+			<label class="radio-label"><input type="checkbox" value="13"/>Label text</label>
+			</div>			<div style="display: block;">
+			<label class="radio-label"><input type="checkbox" value="14"/>Label text</label>
 			</div>
 
 
 			</div>
 		</div>
 		<div class="inner-message">
-			<p>Additional comment: </p>
-			<textarea rows="6" style="width: 75%; margin: auto;"></textarea>
+			<p id="comment-label" style="display: block; width: 75%;">Additional comment: </p>
+			<textarea rows="6" style="display: block; width: 75%;"></textarea>
 		</div>
 
 
 		
-		<button type="submit" style="display:block; width: 50%">Submit</button>
+		<button type="submit" id="submit" style="display:block; width: 50%">Submit</button>
 	</div>
 	</form>
-<script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
