--- a/pro2/index3.html
+++ b/pro2/index3.html
@@ -7,9 +7,9 @@
 	<form id="survey-form">
 	<h1 id="title">Inconsiquential survey</h1>
 	<div class="title-deco"></div>
-	<p id="description">This is a short survey that will ask a few general questions about you, thank you for your time</p>	
+	<p id="description">This is a short survey that doesn't actually ask you anything</p> 
 	<div class="outer" id="outer">
-		<div class="inner names">
+		<div class="inner flex-column">
 		<label id="name-label">Name: </label>
 		<input type="text" id="name" required placeholder="Enter your name here"></input>
 		<label id="email-label">Email: </label>
@@ -17,27 +17,28 @@
 		<label id="number-label">Age: </label>
 		<input type="number" id="number" min="1" max="125" require placeholder="Age"></input>
 		</div>	
-		<div class="inner names">
-			<label id="dropdown-label">Dropdown</label>
+		<div class="inner flex-column">
+			<label id="dropdown-label">Dropdown: </label>
 			<select id="dropdown">
 				<option value="1">One</option>
 				<option value="2">Two</option>
 				<option value="3">Three</option>
 			</select>
-			<label id="dropdown2-label">Second dropdown</label>
+			<label id="dropdown2-label">Second dropdown: </label>
 			<select id="dropdown2">
 				<option value="4">Four</option>
 				<option value="5">Five</option>
 				<option value="6">Six</option>
 			</select>
-			<label id="dropdown3-label">Second dropdown</label>
+			<label id="dropdown3-label">Third dropdown: </label>
 			<select id="dropdown3">
-				<option value="7">Four</option>
-				<option value="8">Five</option>
-				<option value="9">Six</option>
+				<option value="7">Seven</option>
+				<option value="8">Eight</option>
+				<option value="9">Nine</option>
 			</select>
 		</div>	
-		<div class="inner names" style="flex-wrap: wrap;">
+		<div class="inner flex-column" style="flex-wrap: wrap;">
+			<p id="radio-button-label">Radio buttons</p>
 		<div>
 		<div class="radio-outer"> 
 			<p class="radio-label-p">Second choice: </p>
@@ -61,69 +62,70 @@
 			<div class="radio-inner">
 			<label for="r2" name="r2-label" class="radio-label">
 				<input type="radio" id="r4" name="radio-choice2" value="0"/>
-			Choice 1
+			Choice 4
 			</label>	
 			<label for="r2" name="r2-label" class="radio-label">
 				<input type="radio" id="r5" name="radio-choice2" value="1"/>
-			Choice 2
+			Choice 5
 			</label>
 			<label for="r2" name="r2-label" class="radio-label">
 				<input type="radio" id="r6" name="radio-choice2" value="2"/>
-			Choice 3
+			Choice 6
 			</label>
 			</div>
 		</div>
 
 
+
 		</div>	
 		</div>
-		<div class="inner names" style="align-items: center; flex-direction: row; flex-wrap: wrap;"> 
+		<div class="inner flex-column" style="align-items: center; flex-direction: row; flex-wrap: wrap;"> 
 			<div style="height= 20px; display: block;">
 			<label id="checkbox-label">Checkboxes</label>
 			</div>
 			<div class="checkboxes">
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="0"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="0"/>Label One</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="1"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="1"/>Label Two</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="2"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="2"/>Label Three</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="3"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="3"/>Label Four</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="4"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="4"/>Label Five</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="5"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="5"/>Label Six</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="6"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="6"/>Label Seven</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="7"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="7"/>Label Eight</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="8"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="8"/>Label Nine</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="9"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="9"/>Label Ten</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="10"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="10"/>Label Eleven</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="11"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="11"/>Label Twelve</label>
 			</div>
 			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="12"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="12"/>Label Thirteen</label>
 			</div>			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="13"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="13"/>Label Fourteen</label>
 			</div>			<div style="display: block;">
-			<label class="radio-label"><input type="checkbox" value="14"/>Label text</label>
+			<label class="radio-label"><input type="checkbox" value="14"/>Label Fifteen</label>
 			</div>
 
 
@@ -131,7 +133,7 @@
 		</div>
 		<div class="inner-message">
 			<p id="comment-label" style="display: block; width: 75%;">Additional comment: </p>
-			<textarea rows="6" style="display: block; width: 75%;"></textarea>
+			<textarea rows="6" style="display: block; width: 75%; height: 75%"></textarea>
 		</div>
 
 
