9/10 passes for the html content

--- a/pro1/index.html
+++ b/pro1/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <head>
-
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body id="main">
 	<h1 id="title">Lotte Reiniger</h1>
-	<div id="img-div" style="width: 100%; height 50px; display: flex; border: 1px black solid; justify-content: center"><img src="placeholder.jpg" id="image" style="border: pink 1px solid;max-width: 50%; display: block; margin: auto;"><p style="display: block" id="img-caption">This is a placeholder</p></div>
-	<p id="tribute-info"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus bibendum sagittis. Sed in mi sit amet dui placerat efficitur. Sed in ante posuere, fringilla massa nec, pharetra lorem. Vestibulum sit amet vestibulum enim. Vivamus fringilla urna sed dapibus tristique. Nulla pellentesque scelerisque aliquam. Pellentesque sit amet dignissim odio.
+	<div id="img-div"><img src="placeholder.jpg" id="image"><p id="img-caption">This is a placeholder</p></div>
+	<p  id="tribute-info"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus bibendum sagittis. Sed in mi sit amet dui placerat efficitur. Sed in ante posuere, fringilla massa nec, pharetra lorem. Vestibulum sit amet vestibulum enim. Vivamus fringilla urna sed dapibus tristique. Nulla pellentesque scelerisque aliquam. Pellentesque sit amet dignissim odio.
 
 Maecenas placerat nulla sit amet justo tincidunt, elementum hendrerit odio eleifend. Fusce erat sapien, viverra vel nibh at, accumsan sollicitudin nisi. Quisque sit amet quam cursus, volutpat eros eu, viverra est. Mauris convallis volutpat malesuada. Vivamus consequat dui ipsum, a efficitur velit laoreet vel. Nam eget tellus vitae dolor iaculis ornare non at urna. Nulla sed tortor sit amet urna dictum tempor. Suspendisse potenti. Ut vitae egestas sem, eget tincidunt lectus. Ut convallis nisl malesuada, condimentum purus vel, congue erat.
 
