--- a/pro1/index.html
+++ b/pro1/index.html
@@ -4,8 +4,12 @@
 </head>
 
 <body id="main">
+	<div class="title-flex">
+	<img class="curtain" src="test.png"></img>
 	<h1 id="title">Lotte Reiniger</h1>
 	<div id="img-div"><img src="placeholder.jpg" id="image"><p id="img-caption">This is a placeholder</p></div>
+	<img class="curtain flip" src="test.png"></img>
+	</div>
 	<p  id="tribute-info"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus bibendum sagittis. Sed in mi sit amet dui placerat efficitur. Sed in ante posuere, fringilla massa nec, pharetra lorem. Vestibulum sit amet vestibulum enim. Vivamus fringilla urna sed dapibus tristique. Nulla pellentesque scelerisque aliquam. Pellentesque sit amet dignissim odio.
 
 Maecenas placerat nulla sit amet justo tincidunt, elementum hendrerit odio eleifend. Fusce erat sapien, viverra vel nibh at, accumsan sollicitudin nisi. Quisque sit amet quam cursus, volutpat eros eu, viverra est. Mauris convallis volutpat malesuada. Vivamus consequat dui ipsum, a efficitur velit laoreet vel. Nam eget tellus vitae dolor iaculis ornare non at urna. Nulla sed tortor sit amet urna dictum tempor. Suspendisse potenti. Ut vitae egestas sem, eget tincidunt lectus. Ut convallis nisl malesuada, condimentum purus vel, congue erat.
