going to try css grid

--- a/pro1/index.html
+++ b/pro1/index.html
@@ -4,12 +4,19 @@
 </head>
 
 <body id="main">
-	<div class="title-flex">
-	<img class="curtain" src="test.png"></img>
+	<div class="title-flex-top" style="border: 1px pink solid">
+	<img class="curtain" src="curtaint.png"></img>
+	<img class="curtain flip" src="curtaint.png"></img>
+	</div>
+	<div class="title-flex" style="border: 1px violet solid">
+	<img class="curtain" src="curtainb.png">
 	<h1 id="title">Lotte Reiniger</h1>
 	<div id="img-div"><img src="placeholder.jpg" id="image"><p id="img-caption">This is a placeholder</p></div>
-	<img class="curtain flip" src="test.png"></img>
+	<img class="curtain flip" src="curtainb.png">
 	</div>
+
+	<div class="tribute-flex">
+	<img class="deco" src="deco.png">	
 	<p  id="tribute-info"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus bibendum sagittis. Sed in mi sit amet dui placerat efficitur. Sed in ante posuere, fringilla massa nec, pharetra lorem. Vestibulum sit amet vestibulum enim. Vivamus fringilla urna sed dapibus tristique. Nulla pellentesque scelerisque aliquam. Pellentesque sit amet dignissim odio.
 
 Maecenas placerat nulla sit amet justo tincidunt, elementum hendrerit odio eleifend. Fusce erat sapien, viverra vel nibh at, accumsan sollicitudin nisi. Quisque sit amet quam cursus, volutpat eros eu, viverra est. Mauris convallis volutpat malesuada. Vivamus consequat dui ipsum, a efficitur velit laoreet vel. Nam eget tellus vitae dolor iaculis ornare non at urna. Nulla sed tortor sit amet urna dictum tempor. Suspendisse potenti. Ut vitae egestas sem, eget tincidunt lectus. Ut convallis nisl malesuada, condimentum purus vel, congue erat.
@@ -19,6 +26,8 @@ Phasellus purus libero, elementum vitae finibus ac, placerat id magna. Sed a lac
 Suspendisse scelerisque, dolor sit amet tincidunt mattis, nisi nunc pretium neque, quis fermentum orci arcu nec elit. Etiam et odio dui. Donec luctus nulla sapien, vitae blandit ligula posuere eu. Suspendisse cursus justo ac lacus ullamcorper viverra. Etiam facilisis vestibulum turpis. Etiam efficitur nec magna id sollicitudin. Praesent id urna purus. In mattis nulla id auctor tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus quis consectetur diam, vitae scelerisque purus. Integer eget aliquet arcu. Sed nulla odio, euismod eget accumsan at, ullamcorper venenatis neque. Phasellus eu nisl tempor, hendrerit nulla vitae, tempor lorem. Vestibulum tristique massa ut neque dignissim, non pulvinar nulla iaculis. Suspendisse a ligula at mauris congue pharetra ut et ante.
 
 Suspendisse suscipit, elit vel commodo dapibus, augue felis auctor dolor, eget fermentum turpis leo quis leo. Donec eget mollis augue. Sed non diam id quam semper molestie vitae non risus. Vestibulum non lobortis est. Ut at eros sit amet dui commodo bibendum. Duis pharetra auctor diam ut consequat. Aenean iaculis posuere mi, sed consequat ante ultricies sit amet. Donec sit amet ligula in justo cursus dignissim at pharetra eros. Vivamus mi metus, feugiat at augue vel, placerat sodales augue. Donec tempus dignissim massa, sed lobortis metus.</p>
+	<img class="deco flip" src="deco.png">
+	</div>
 	<p>For more information click <a target="_blank" id="tribute-link" href="#">here</a></p>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
