try and redo the curtain spliting

--- a/pro1/index2.html
+++ b/pro1/index2.html
@@ -4,6 +4,16 @@
 </head>
 
 <body id="main">
-	<div class="title-grid" style="border: 1px pink solid">
+	<div class="title-grid-t" style="border: 1px pink solid">
+		<img src="curtaint.png">
+		<div class= "help"><p>Something</p></div>
+		<img class= "flip" src="curtaint.png">	
 	</div>
-</body>
+	<div class="title-grid-b" style="border: 1px tomato solid">
+		<img src="curtainb.png">
+		</img>
+		<div class="help">
+		</div>
+		<img class="flip" src="curtainb.png"> 
+		</img>
+	</body>
