text still isn't aligning correctly?, will ask around about that but I'd like to keep moving

--- a/pro1/index2.html
+++ b/pro1/index2.html
@@ -6,7 +6,7 @@
 <body id="main">
 	<div class="title-grid-t" style="border: 1px pink solid">
 		<img src="curtaint.png">
-		<div class= "help"><p>Something</p></div>
+		<div class= "help title-div"><div class="title-text help"><h1>Lotte Reiniger</h1></div></div>
 		<img class= "flip" src="curtaint.png">	
 	</div>
 	<div class="title-grid-b" style="border: 1px tomato solid">
@@ -16,4 +16,10 @@
 		</div>
 		<img class="flip" src="curtainb.png"> 
 		</img>
+	</div>
+	<div class="content-grid help">
+		<img src="deco.png">
+		<div class="help"></div>
+		<img src="deco.png" class="flip">
+	</div>
 	</body>
