--- a/pro1/index2.html
+++ b/pro1/index2.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <head>
 	<link rel="stylesheet" href="style2.css">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
 
 <body id="main">
 	<div class="title-grid-t" style="border: 1px pink solid">
-		<img src="curtaint.png">
+		<img src="curtaintm.png">
 		<div class= "help title-div"><div class="title-text help"><h1>Lotte Reiniger</h1></div></div>
-		<img class= "flip" src="curtaint.png">	
+		<img class= "flip" src="curtaintm.png">	
 	</div>
 	<div class="title-grid-b" style="border: 1px tomato solid">
-		<img src="curtainb.png">
+		<img class = "help"src="curtainbm.png">
 		</img>
 		<div class="help">
 		</div>
-		<img class="flip" src="curtainb.png"> 
+		<img class="help flip" src="curtainbm.png"> 
 		</img>
 	</div>
 	<div class="content-grid help">
