there is always tonight

--- a/pro1/index2.html
+++ b/pro1/index2.html
@@ -10,17 +10,21 @@
 		<div class= "help title-div"><div class="title-text help"><h1>Lotte Reiniger</h1></div></div>
 		<img class= "flip" src="curtaintm.png">	
 	</div>
-	<div class="title-grid-b" style="border: 1px tomato solid">
+	<div class="title-grid-b" >
 		<img class = "help"src="curtainbm.png">
 		</img>
-		<div class="help">
+		<div class="help" style="margin: 0 auto;">
+			<img class="fill-width" src="placeholder.png"></img>
 		</div>
 		<img class="help flip" src="curtainbm.png"> 
 		</img>
 	</div>
 	<div class="content-grid help">
 		<img src="deco.png">
-		<div class="help"></div>
+		<div class="help content-column"> 
+			<img class="divider" src="divider.png"></img>
+			<p class="divider">This is some text to test if this will actully work, I doubt it will since I'm still not really comfortable with this whole thing.</p>
+		</div>
 		<img src="deco.png" class="flip">
 	</div>
 	</body>
