art is coming along, still need another session or two to complete though

--- a/pro3/index.html
+++ b/pro3/index.html
@@ -6,9 +6,10 @@
 
 <body>
 	<div class="header-flex">
-		<img  class="menu-div" src="placeholder.png">
-		<img  class="menu-div" src="placeholder.png">
-		<img  class="menu-div" src="placeholder.png">
+		<h1 class="menu-item">Cat Service</h1>
+		<img  class="menu-item" src="placeholder.png">
+		<img  class="menu-item" src="placeholder.png">
+		<img  class="menu-item" src="placeholder.png">
 
 
 	</div>
