--- a/pro3/index.html
+++ b/pro3/index.html
@@ -6,17 +6,24 @@
 
 <body>
 	<div class="header-flex">
-		<h1 class="menu-item">Cat Service</h1>
-		<img  class="menu-item" src="placeholder.png">
-		<img  class="menu-item" src="placeholder.png">
+		<img class="menu-item visible-mobile" src="aboutm.png">
+		<img class="menu-item visible-desktop" src="about.png">
+		<img class="menu-item visible-mobile" src="aboutm.png">
+		<img class="menu-item visible-desktop" src="about.png">
+		<img class="menu-item visible-mobile" src="videom.png">
+		<img class="menu-item visible-desktop" src="video.png">
+		<img class="menu-item visible-mobile" src="pricingm.png">
+		<img class="menu-item visible-desktop" src="pricing.png">
+
 
 
 	</div>
 	<div class="filler-div"></div>
 	<div class="form-div">
-		<input type="email"></input>
-		<button >Submit</button>
+		<input class= "menu-item input" type="email"></input>
+		<button class="submit-button" >Submit</button>
 	</div>
+
 
 	<p> rem ipsum dolor sit amet, consectetur adipiscing elit. Praesent libero nisl, fermentum placerat metus ultricies, maximus euismod leo. Mauris quis tincidunt ex, eu bibendum quam. Etiam efficitur sapien id ante mollis, quis dapibus orci lacinia. Praesent at dolor non felis efficitur mollis in pretium mauris. Sed euismod sem non nunc eleifend cursus. Proin vitae pharetra dui, vel pellentesque neque. Aenean dignissim, nunc at suscipit interdum, elit metus egestas tellus, a hendrerit nulla nulla in arcu. Suspendisse ut purus blandit, mattis tortor sit amet, feugiat velit. Aliquam vulputate risus a lorem bibendum vehicula. Nam consectetur purus ligula.<br>
 
