Working on the about section

--- a/pro3/index.html
+++ b/pro3/index.html
@@ -24,6 +24,14 @@
 		<button class="submit-button" >Submit</button>
 	</div>
 
+	<div class="about-div">
+		<img src="bullet-holder.png">
+		<h2>Something</h2>
+		<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus. Cras consequat faucibus viverra. Proin rutrum vitae dui a maximus. Etiam eget lorem dui.</p>
+
+
+	</div>
+
 
 	<p> rem ipsum dolor sit amet, consectetur adipiscing elit. Praesent libero nisl, fermentum placerat metus ultricies, maximus euismod leo. Mauris quis tincidunt ex, eu bibendum quam. Etiam efficitur sapien id ante mollis, quis dapibus orci lacinia. Praesent at dolor non felis efficitur mollis in pretium mauris. Sed euismod sem non nunc eleifend cursus. Proin vitae pharetra dui, vel pellentesque neque. Aenean dignissim, nunc at suscipit interdum, elit metus egestas tellus, a hendrerit nulla nulla in arcu. Suspendisse ut purus blandit, mattis tortor sit amet, feugiat velit. Aliquam vulputate risus a lorem bibendum vehicula. Nam consectetur purus ligula.<br>
 
